@@ -6,6 +6,7 @@
 * Added system::get_localtime function.
 * Refactored test directory tree.
 * Added instrumentComponent tag support for Hydrogen.
+* Added io::Path::rename and io::File::rename functions.
 
 === 0.5.6 ===
 * Updated build (better support for BSD systems).
